templates/static/css/accueil.css
body{
    display: flex;
    padding: 0;
    margin: 0;
    overflow: hidden;
    background-color: #1a0338;
    font-family: 'Courier New', Courier, monospace;
}

main{
    width: 80vw;
    background-color:#1a0338;
    color: ghostwhite;
}

aside{
    width: 15vw;
    padding: 2.5vw;
    background-color:#030b1e;
    color: ghostwhite;
    padding-bottom: 100vh;
    border-right: 1px solid ghostwhite;
}

header{
    background-color: #030b1e;
    color: ghostwhite;
    padding: 2rem 2rem 1rem 2rem;
    margin: 0;
    display: flex;
    justify-content: space-between; /* Aligne les éléments à l'extrémité gauche et droite */
    align-items: center; /* Centre les éléments verticalement */
}

header > * {
    flex-basis: 40%;
}

.text-field {
    height: 2em;
    padding: 0.5rem;
    margin: 0.5rem;
    border-radius: 0.5rem;
    border: 1px solid ghostwhite;
    margin-right: 3%;
    width: 50%;
      -webkit-transition: width 0.15s ease-in-out;
      transition: width 0.15s ease-in-out;
}

.albumAccueil{
    display: flex;
    flex-wrap: nowrap;
    overflow-x: scroll;
    scrollbar-color: ghostwhite #1a0338;
}

.albumAccueil img{
    width: 10vw;
    height: 10vw;
    margin: 1rem;
    border: 1px solid ghostwhite;
    border-radius: 1rem;
}

.albumsPlaylist {
    display: flex;
    flex-wrap: wrap;
    overflow-x: auto;
    overflow-y: auto;
    max-height: 47%;
}

.albumsPlaylist img {
    width: 10vw;
    height: 10vw;
    margin: 1rem;
    border: 1px solid ghostwhite;
    border-radius: 1rem;
}

section.main{
    margin: 0 auto;
    padding: 2rem;
}

button {
    font-size: 16px;
    position: relative;
    margin: auto;
    padding: 1em 2.5em 1em 2.5em;
    border: none;
    background: #fff;
    transition: all 0.1s linear;
    box-shadow: 0 0.4em 1em rgba(0, 0, 0, 0.1);
   }
   
   button:active {
    transform: scale(0.95);
   }
   
   button span {
    color: #464646;
   }
   
   button .border {
    position: absolute;
    border: 0.15em solid #fff;
    transition: all 0.3s 0.08s linear;
    top: 50%;
    left: 50%;
    width: 9em;
    height: 3em;
    transform: translate(-50%, -50%);
   }
   
   button:hover .border {
    display: block;
    width: 10.5em;
    height: 3.7em;
   }
   
   .full-rounded {
    border-radius: 2em;
   }

